# MAMV-Model-

./: .gitignore  AGENTS.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml  train.yml
configs/: base.yaml  document_qa.yaml  genericity.yaml  reasoning.yaml  retrieval.yaml
datasets/: README.md  classroom_demo_reading.txt  sample_dataset.jsonl
docs/: AUTHORITY_BOUNDARIES.md  CONFIDENCE_SEMANTICS.md  CONTRADICTION_CANDIDATES.md  DECISION_PROVENANCE.md  ECOSYSTEM_INTEGRATION.md  EDUCATION_USE.md  FRAME_COMPATIBILITY.md  INFERENCE_FRAMES.md  INFORMATIONAL_RELATIVITY.md  INFORMATIONAL_RELATIVITY_AUDIT.md  MODEL_RESULT_SCHEMA.md  MULTI_DOCUMENT_REASONING.md  REPRODUCIBILITY_AUDIT.md  SYNTHESIS_MODES.md  VERIFICATION_STACK.md
evals/: benchmark.py  genericity.jsonl
mamv_model/: __init__.py  cli.py  documents.py  pipeline.py
mamv_model/weights/: mamv-base.json
schemas/: checkpoint-manifest-v1.json  claim-candidate-v1.json  claim-candidate-v2.json  dataset-manifest-v1.json  decision-provenance-v1.json  evaluation-report-v1.json  evidence-candidate-v1.json  evidence-candidate-v2.json  inference-frame-v1.json  inference-frame-v2.json  mamv-model-result-v1.json  mamv-model-result-v2.json  mamv-model-result-v3.json  mamv-model-result-v4.json  operation-record-v1.json  training-run-v1.json
scripts/: classroom_demo.py  evaluate.py  export.py  generate_model_card.py  inference.py  prepare_dataset.py  publish_to_huggingface.py  train.py  validate_release.py
src/mamv_model/: __init__.py  coherence.py  config.py  decision_provenance.py  document_qa.py  genericity.py  ingestion.py  metrics.py  model_result.py  provenance.py  reasoning.py  retrieval.py  semantic.py  session.py  verifier.py
src/mamv_model/integrations/: __init__.py  mamv.py  mamv_ir.py
tests/: test_classroom.py  test_coherence_integration_session.py  test_core.py  test_inference_frames.py  test_model_result_contract.py  test_multi_document.py  test_pipeline.py  test_provenance.py  test_reasoning.py  test_training_smoke.py  test_verification_stack.py
