[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mamv-model"
version = "0.1.0"
description = "Grounded document question answering with inspectable baseline weights"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MAMV-Model contributors"}]
dependencies = [
    "faiss-cpu==1.11.0",
    "numpy==2.3.2",
    "Pillow==11.3.0",
    "pypdf==5.9.0",
    "pytesseract==0.3.13",
    "python-docx==1.2.0",
    "sentence-transformers==5.0.0",
]

[project.optional-dependencies]
pdf = []

[project.scripts]
mamv = "mamv_model.cli:main"

[tool.setuptools]
packages = ["mamv_model"]
include-package-data = true

[tool.setuptools.package-data]
mamv_model = ["weights/*.json"]
