[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mamv-model"
version = "0.1.0"
description = "Training and evaluation toolkit for MAMV document understanding models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MAMV contributors"}]
dependencies = ["pyyaml>=6.0", "numpy>=1.26", "pypdf>=4.0", "python-docx>=1.1"]

[project.optional-dependencies]
training = ["torch>=2.2", "transformers>=4.41", "datasets>=2.19,<3", "dill>=0.3.7,<0.3.9", "peft>=0.11", "accelerate>=0.30"]
publish = ["huggingface-hub>=0.23"]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["training: offline Trainer integration smoke test"]
